--- a/03-CSS基本样式编写/09-CSS浮动/01_浮动的应用.html
+++ b/03-CSS基本样式编写/09-CSS浮动/01_浮动的应用.html
@@ -6,7 +6,8 @@
 		<style type="text/css">
 			.box {
 				width: 990px;
-				height: 500px;
+				/* height: 500px; */
+				height: auto;
 				background-color: #00FFFF;
 				margin: 0 auto;
 			}
@@ -21,10 +22,15 @@
 			.wrap {
 				margin-right: -10px;
 			}
+			.clear-fixe::after {
+				content: "";
+				clear: both;
+				display: block;
+			}
 		</style>
 	</head>
 	<body>
-		<div class="box">
+		<div class="box clear-fixe">
 			<div class="wrap">
 				<div class="box1"></div>
 				<div class="box1"></div>
@@ -38,5 +44,13 @@
 				<div class="box1"></div>
 			</div>
 		</div>
+		<p>woshi p</p>
+		<p>woshi p</p>
+		<p>woshi p</p>
+		<p>woshi p</p>
+		<p>woshi p</p>
+		<p>woshi p</p>
+		<p>woshi p</p>
+		<p>woshi p</p>
 	</body>
 </html>
