demo练习，复习知识点

--- a/03-CSS基本样式编写/09-CSS浮动/06_清除浮动.html
+++ b/03-CSS基本样式编写/09-CSS浮动/06_清除浮动.html
@@ -3,6 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<style type="text/css">
+			.clear-fixe::after {
+				content: "";
+				display: block;
+				clear: both;
+				height: 0;
+				visibility: hidden;
+			}
+		</style>
 	</head>
 	<body>
 	</body>
