--- a/09-demo-kaola/index.html
+++ b/09-demo-kaola/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/common.css"/>
 		<link rel="stylesheet" type="text/css" href="./css/header.css"/>
 		<link rel="stylesheet" type="text/css" href="./css/top.css"/>
+		<link rel="stylesheet" type="text/css" href="./css/main.css"/>
 	</head>
 	<body>
 		<div id="header">
@@ -175,9 +176,29 @@
 			</div>
 			<div class="swiper">
 				<div class="ss">
-					<img src="./img/195e114026244fada65668a37992e70e_1920_506.png" alt="">
+					<a href="#">
+					<img src="./img/195e114026244fada65668a37992e70e_1920_506.png" alt="">	
+					<span class="control wrap">
+						<i class="prev"></i>
+						<i class="next"></i>
+					</span>
+					<span class="dians">
+						<span class="dian">
+						<i class="active"></i>
+						<i></i>
+						<i></i>
+						<i></i>
+						<i></i>
+						<i></i>
+						<i></i>
+						<i></i>
+					</span>
+					</span>
+					
+					</a>
 				</div>
 				<div class="footnav">
+					<div class="blur"></div>
 					<ul class="wrap">
 						<li><a href="#">考拉自营</a></li>
 						<li><a href="#">全球直采</a></li>
@@ -188,6 +209,121 @@
 				</div>
 			</div>
 			
+		</div>
+		<div id="main">
+			<div class="brand wrap clear-fixe">
+				<div class="brand-title">
+					<h2>
+						热门品牌
+					<span>全球精选，一网打尽</span>
+					<a href="#">换一批</a>
+					</h2>
+				</div>
+				<div class="left-brand">
+					<a href="#">
+						<img src="./img/isijdxsx56_400_400.jpeg" alt="Kao 花王">
+						<div class="jiantou">
+							<i class="prev"></i>
+							<i class="next"></i>
+						</div>
+					</a>
+					<div class="process"></div>
+					<a href="#">
+						<span class="title">Kao 花王</span>
+						<span class="desc">日本高人气日化品牌</span>
+					</a>
+				</div>
+				<ul class="right-brand">
+					<li>
+						<div class="info">
+							<img src="./img/iglzia3975_120_120.jpeg" alt="">
+							<p>"妈妈之选"大奖得主</p>
+						</div>
+						<div class="active">
+							<a class="focus" href="#">+关注</a>
+							<p class="desc">100000人关注该品牌</p>
+							<a class="enter" href="#">进入品牌</a>
+						</div>
+					</li>
+					<li>
+						<div class="info">
+							<img src="./img/iglzia3975_120_120.jpeg" alt="">
+							<p>"妈妈之选"大奖得主</p>
+						</div>
+						<div class="active">
+							<a class="focus" href="#">+关注</a>
+							<p class="desc">100000人关注该品牌</p>
+							<a class="enter" href="#">进入品牌</a>
+						</div>
+					</li>
+					<li>
+						<div class="info">
+							<img src="./img/iglzia3975_120_120.jpeg" alt="">
+							<p>"妈妈之选"大奖得主</p>
+						</div>
+						<div class="active">
+							<a class="focus" href="#">+关注</a>
+							<p class="desc">100000人关注该品牌</p>
+							<a class="enter" href="#">进入品牌</a>
+						</div>
+					</li>
+					<li>
+						<div class="info">
+							<img src="./img/iglzia3975_120_120.jpeg" alt="">
+							<p>"妈妈之选"大奖得主</p>
+						</div>
+						<div class="active">
+							<a class="focus" href="#">+关注</a>
+							<p class="desc">100000人关注该品牌</p>
+							<a class="enter" href="#">进入品牌</a>
+						</div>
+					</li>
+					<li>
+						<div class="info">
+							<img src="./img/iglzia3975_120_120.jpeg" alt="">
+							<p>"妈妈之选"大奖得主</p>
+						</div>
+						<div class="active">
+							<a class="focus" href="#">+关注</a>
+							<p class="desc">100000人关注该品牌</p>
+							<a class="enter" href="#">进入品牌</a>
+						</div>
+					</li>
+					<li>
+						<div class="info">
+							<img src="./img/iglzia3975_120_120.jpeg" alt="">
+							<p>"妈妈之选"大奖得主</p>
+						</div>
+						<div class="active">
+							<a class="focus" href="#">+关注</a>
+							<p class="desc">100000人关注该品牌</p>
+							<a class="enter" href="#">进入品牌</a>
+						</div>
+					</li>
+					<li>
+						<div class="info">
+							<img src="./img/iglzia3975_120_120.jpeg" alt="">
+							<p>"妈妈之选"大奖得主</p>
+						</div>
+						<div class="active">
+							<a class="focus" href="#">+关注</a>
+							<p class="desc">100000人关注该品牌</p>
+							<a class="enter" href="#">进入品牌</a>
+						</div>
+					</li>
+					<li>
+						<div class="info">
+							<img src="./img/iglzia3975_120_120.jpeg" alt="">
+							<p>"妈妈之选"大奖得主</p>
+						</div>
+						<div class="active">
+							<a class="focus" href="#">+关注</a>
+							<p class="desc">100000人关注该品牌</p>
+							<a class="enter" href="#">进入品牌</a>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
 		
 	</body>
